[gd_scene load_steps=36 format=2]

[ext_resource path="res://Scripts/Enemys/Eskeleton/Eskeleton_Patrol.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/skeleton-clothed-1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Death/1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Death/2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Death/3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Death/4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Death/5.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Hurt/1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Hurt/2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Hurt/3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Hurt/4.png" type="Texture" id=11]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Hurt/5.png" type="Texture" id=12]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Hurt/6.png" type="Texture" id=13]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Hurt/7.png" type="Texture" id=14]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Hurt/8.png" type="Texture" id=15]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/skeleton-clothed-2.png" type="Texture" id=16]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/skeleton-clothed-3.png" type="Texture" id=17]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/skeleton-clothed-4.png" type="Texture" id=18]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/skeleton-clothed-5.png" type="Texture" id=19]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/skeleton-clothed-6.png" type="Texture" id=20]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/skeleton-clothed-7.png" type="Texture" id=21]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/skeleton-clothed-8.png" type="Texture" id=22]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Rise/skeleton-rise-clothed-4.png" type="Texture" id=23]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Rise/skeleton-rise-clothed-1.png" type="Texture" id=24]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Rise/skeleton-rise-clothed-2.png" type="Texture" id=25]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Rise/skeleton-rise-clothed-3.png" type="Texture" id=26]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Rise/skeleton-rise-clothed-6.png" type="Texture" id=27]
[ext_resource path="res://Assets/Enemy/Skeleton Clothed/Rise/skeleton-rise-clothed-5.png" type="Texture" id=28]

[sub_resource type="Animation" id=1]
resource_name = "Death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ray:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("damage/shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_PointsSkeleton"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Hurt"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ray:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("damage/shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Raise"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 23 ), ExtResource( 28 ), ExtResource( 27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.4, 0.4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ray:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("damage/shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "UnRaise"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.4, 0.4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ray:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("damage/shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=5]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ray:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("damage/shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.17555, 16.2947 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 11.2729, 16.0928 )

[node name="Eskeleton_Patrol" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 4.8084, 0 )
texture = ExtResource( 8 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 1 )
anims/Hurt = SubResource( 2 )
anims/Raise = SubResource( 3 )
anims/UnRaise = SubResource( 4 )
anims/walking = SubResource( 5 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 3.50388, 9.92764 )
shape = SubResource( 6 )

[node name="damage" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="shape" type="CollisionShape2D" parent="damage"]
position = Vector2( 4.63482, 9.88861 )
shape = SubResource( 7 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 5.13865, 5.86334 )
scale = Vector2( 1.51387, 2.00797 )

[node name="ray" type="RayCast2D" parent="."]
position = Vector2( 11.3314, 25.298 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="ray2" type="RayCast2D" parent="."]
position = Vector2( 6, 21.3728 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 20 )
[connection signal="body_entered" from="damage" to="." method="_on_damage_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
